--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Celeste's Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello world</h1>
+    <a href="{% url 'home' %}"><h1 class="text-center text-primary pt-5">Celeste is the Best</h1></a>
+    <hr>
 
+    <div class="container">
     {% block content %}
     <!-- this is where all our code goes!! -->
     {% endblock %}
+    </div>
 
     <script src="index.js"></script>
   </body>
